@@ -2,9 +2,9 @@ package com.sprint.mission.monew.domain.article.service;
 
 import com.sprint.mission.monew.common.dto.CursorPageResponse;
 import com.sprint.mission.monew.domain.article.dto.ArticleResponse;
-import com.sprint.mission.monew.domain.article.dto.ArticleOrderBy;
 import com.sprint.mission.monew.domain.article.dto.ArticleQueryCondition;
 import com.sprint.mission.monew.domain.article.entity.Article;
+import com.sprint.mission.monew.domain.article.exception.ArticleNotFoundException;
 import com.sprint.mission.monew.domain.article.mapper.ArticleMapper;
 import com.sprint.mission.monew.domain.article.repository.ArticleRepository;
 import com.sprint.mission.monew.domain.article.repository.ArticleViewRepository;
@@ -12,7 +12,6 @@ import java.time.Instant;
 import java.util.List;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -33,7 +32,7 @@ public class ArticleService {
     boolean hasNext = articles.size() > condition.limit();
     List<Article> page = hasNext ? articles.subList(0, condition.limit()) : articles;
 
-    List<UUID> articleIds = page.stream().map(Article::getId).collect(Collectors.toList());
+    List<UUID> articleIds = page.stream().map(Article::getId).toList();
     Set<UUID> viewedIds =
         articleIds.isEmpty()
             ? Set.of()
@@ -41,25 +40,25 @@ public class ArticleService {
 
     List<ArticleResponse> content =
         page.stream()
-            .map(a -> articleMapper.toDto(a, viewedIds.contains(a.getId())))
-            .collect(Collectors.toList());
+            .map(a -> articleMapper.toResponse(a, viewedIds.contains(a.getId())))
+            .toList();
 
     String nextCursor = null;
     Instant nextAfter = null;
     if (hasNext && !page.isEmpty()) {
       Article last = page.get(page.size() - 1);
-      nextCursor = buildCursor(last, condition.orderBy());
+      nextCursor = articleRepository.buildCursor(last, condition.orderBy());
       nextAfter = last.getCreatedAt();
     }
 
     return CursorPageResponse.of(content, nextCursor, nextAfter, hasNext, content.size(), totalElements);
   }
 
-  private String buildCursor(Article article, ArticleOrderBy orderBy) {
-    return switch (orderBy) {
-      case PUBLISH_DATE -> article.getPublishDate().toString();
-      case COMMENT_COUNT -> String.valueOf(article.getCommentCount());
-      case VIEW_COUNT -> String.valueOf(article.getViewCount());
-    };
+  public ArticleResponse getArticle(UUID articleId, UUID requestUserId) {
+    Article article = articleRepository.findById(articleId)
+        .filter(a -> !a.isDeleted())
+        .orElseThrow(() -> ArticleNotFoundException.withId(articleId));
+    boolean viewedByMe = articleViewRepository.existsByArticleIdAndUserId(articleId, requestUserId);
+    return articleMapper.toResponse(article, viewedByMe);
   }
 }
